<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, TellTaleActivity!</string>
    <string name="app_name">Tell Tale</string>
    <string name="btn_text_reg">Register</string>
    <string name="btn_text_profile">My Profile</string>
    <string name="btn_text_onging_list">See Ongoing Stories</string>
    <string name="btn_text_complete_story_list">See Complete Stories</string>
    <string name="btn_text_initiate_story">Start your own story</string>
    <string name="btn_text_login">Log In !</string>
    <string name="tv_text_username">Mail ID</string>
    <string name="tv_text_password">Password</string>
    <string name="tv_text_initiate_"/>
    <string name="btn_text_submit">Submit !!</string>
    <string name="likeCount">likeCount</string>
    <string name="username">username</string>
    <string name="btn_text_contribute_post">Propose Extension</string>
    <string name="text"/>
    <string name="cb_suggest_end">Should this be the end of this story ??</string>
    <string name="btn_text_submit_contribution">Submit Contribution</string>
    <string name="btn_my_initiated_stories">My Initiated  Ongoing Stories</string>
    <string name="btn_my_stories">My Initiated Stories</string>
    <string name="btn_see_more">See More</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_approve_apppend_suggestion">Append This Suggestion To My Story</string>
    <color name="R">#FF5577</color>
    <string name="tv_approve_append_suggestion_sure">Are you sure you want to append this suggestion to your story ???</string>
    <color name="Red">#12EF53</color>
    <string name="tv_approve_append_suggestion_isEnd">This suggestion was marked end. Adding this will complete your story </string>
    <string name="tv_view_full_story">Viewing Full Story</string>
    <string name="tv_name">Name</string>
    <color name="background">#FCFFF2</color>
    <color name="transparent">#99FFFFFF</color>
    <color name="text_dark_green">#FE192B0C</color>
    <color name="text_orandge">#FFf0742d</color>
    <color name="text_light_orange">#AAf0742d</color>
    <string name="btn_back">Back</string>
    <color name="popup_back">#88EDF0D0</color>
    <string name="point">Points You Have Earned</string>
    <string name="comment">No. of story contributions</string>
    <string name="initiatated">No. of Stories you have initiated</string>
    <string name="appended">No. of Appended Posts</string>
    <string name="hey">Hi !! </string>
    <string name="tv_appended_part">Appended Part</string>
    <string name="tv_unappended_part">Unappended Part</string>
    <string name="tv_confirm_delete">Are you sure you want to delete this post? \nAll progress following this will be lost </string>
    <string name="btn_confirm_delete">Delete !!</string>
    <string name="btn_grp_managemement">Group Management</string>
    <string name="btn_create_group">Create Story Circle</string>
    <string name="btn_list_my_created_group">See Story Circles I Own</string>
    <string name="btn_list_groups_i_am_in">See Story Circles I am in</string>
    <string name="tv_enter_group_name">Name of the Story Circle</string>
    <string name="btn_add_remove_member_from_group">Add / Remove Member </string>
    <string name="btn_delete_group">Delete Story Circle</string>
    <string name="tv_select_group">Select A Story Circle</string>
    <string name="tv_delete_grp_popup_confirm">Are yor sure you want to delete this story circle ?? </string>
    <string name="tv_delete_group_popup_warning">No stories will be deleted! All stories of this group will be public !</string>
    <string name="btn_delete_group_confirm">Delete !!</string>
    <string name="btn_add_member">Add  !!</string>
    <string name="btn_remove_member">Remove !!</string>
    <string name="tv_story_circle_i_am_in">Story Circles I Am in : </string>
    
</resources>