<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
        android:background="@drawable/back"
        >

    <Button
        android:id="@+id/initiate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_text_initiate_story"
        
        android:background="@drawable/button_shape" 
        android:layout_marginBottom="5dip"
         />

    <Button
        android:id="@+id/btn_id_see_ongoing_stories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_text_onging_list" 
        android:background="@drawable/button_shape" 
        android:layout_marginBottom="5dip"
        />

    <Button
        android:id="@+id/btn_completed_story_feed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_text_complete_story_list" 
        android:background="@drawable/button_shape" 
        android:layout_marginBottom="5dip"
        />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_text_profile" 
        android:background="@drawable/button_shape" 
        android:layout_marginBottom="5dip"
        />

    <Button
        android:id="@+id/btn_my_initiated_stories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_my_stories"
        android:background="@drawable/button_shape" 
        android:layout_marginBottom="5dip"
         />

    <Button
        android:id="@+id/btn_my_initiated_ongoing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_my_initiated_stories" 
        android:background="@drawable/button_shape" 
        android:layout_marginBottom="5dip"
        />

</LinearLayout>