<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@drawable/back"
    
    
    >

    


    <include 
        layout="@layout/top"/>
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_text_username"
         />

    <EditText
        android:id="@+id/editText_id_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
       
        >
	
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_text_password" />

    <EditText
        android:id="@+id/editText_id_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_text_login"
        android:background="@drawable/button_shape" 
        android:layout_marginBottom="5dip"
        />

    <Button
        android:id="@+id/btn_registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_text_reg" 
        android:background="@drawable/button_shape"
        android:layout_marginBottom="5dip"        
     />

</LinearLayout>