<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical" >



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:background="@android:color/darker_gray"
        android:orientation="vertical" >

     >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical" >


    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_approve_append_suggestion_sure"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/Red" />

    <TextView
        android:id="@+id/tv_append_confirm_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tv_append_confirm_isSuggestedEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_approve_append_suggestion_isEnd"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/R" />

    <Button
        android:id="@+id/btn_approve_append_suggestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_approve_apppend_suggestion" />

    <Button
        android:id="@+id/btn_append_close_popup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_cancel" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>