<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical" >



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:background="@color/popup_back"
        android:orientation="vertical" >

     >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_add_remove_from_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_delete_grp_popup_confirm"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/text_orandge" />

    <EditText
        android:id="@+id/et_add_remove_grom_group_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btn_add_member_to_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dip"
        android:background="@drawable/button_shape"
        android:text="@string/btn_add_member" />

    <Button
        android:id="@+id/btn_remove_member_from_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dip"
        android:background="@drawable/button_shape"
        android:text="@string/btn_delete_group_confirm" />
    
    <Button
        android:id="@+id/btn_add_remove_from_group_popup_close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dip"
        android:background="@drawable/button_shape"
        android:text="@string/btn_cancel" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>