<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@drawable/back"
    
    
    >

    


    <include 
        layout="@layout/top"/>

       <TextView
           android:id="@+id/tv_my_ongoing_row_text"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/tv_enter_group_name"
           android:textAppearance="?android:attr/textAppearanceLarge"
           android:textColor="@color/text_dark_green" />

    <EditText
        android:id="@+id/et_group_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
	
        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btn_create_group_from_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dip"
        android:background="@drawable/button_shape"
        android:text="@string/btn_create_group" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dip"
        android:background="@drawable/button_shape"
        android:text="@string/btn_back" />

</LinearLayout>